// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: SelectField minimal snapshot 1`] = `
.c11 {
  font-size: 8px;
  vertical-align: middle;
}

.c2 + .c1 {
  margin-top: 16px;
}

.c4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c9 {
  font-style: italic;
  color: hsl(200,9%,35%);
  font-size: 18px;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  min-width: 194px;
  width: 100%;
  height: 32px;
  padding: 0 24px 0 16px;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(200,9%,35%);
  text-align: left;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c7:disabled {
  border-color: hsl(0,0%,70%);
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c7:disabled .c8 {
  display: none;
}

.c7::-moz-focus-inner {
  border: 0;
}

.c7:focus,
.c7[aria-expanded] {
  border-color: hsl(200,96%,35%);
}

.c7:focus .c10,
.c7[aria-expanded] .c10 {
  color: hsl(200,96%,35%);
}

.c7[aria-expanded] .c10 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c7 .c10 {
  position: absolute;
  right: 14px;
  top: 10px;
}

.c6 {
  max-width: 100%;
}

.c0 {
  position: relative;
}

.c0 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c0 .c13 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .c12 {
  margin-left: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3 c4"
      for="prevent-random-id"
    >
      Requires a label
    </label>
    <div
      class="c5 c6"
    >
      <div>
        <button
          aria-describedby=" "
          aria-haspopup="listbox"
          aria-multiselectable="false"
          class="c7"
          id="prevent-random-id"
          name="the-test-select-field"
          type="button"
        >
          <span
            class="c8 c9"
          >
            Select an option
          </span>
          <svg
            class="c10 c11"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: SelectField render with complex options 1`] = `
.c11 {
  font-size: 8px;
  vertical-align: middle;
}

.c2 + .c1 {
  margin-top: 16px;
}

.c4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c9 {
  font-style: italic;
  color: hsl(200,9%,35%);
  font-size: 18px;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  min-width: 194px;
  width: 100%;
  height: 32px;
  padding: 0 24px 0 16px;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(200,9%,35%);
  text-align: left;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c7:disabled {
  border-color: hsl(0,0%,70%);
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c7:disabled .c8 {
  display: none;
}

.c7::-moz-focus-inner {
  border: 0;
}

.c7:focus,
.c7[aria-expanded] {
  border-color: hsl(200,96%,35%);
}

.c7:focus .c10,
.c7[aria-expanded] .c10 {
  color: hsl(200,96%,35%);
}

.c7[aria-expanded] .c10 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c7 .c10 {
  position: absolute;
  right: 14px;
  top: 10px;
}

.c6 {
  max-width: 100%;
}

.c0 {
  position: relative;
}

.c0 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c0 .c13 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .c12 {
  margin-left: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3 c4"
      for="prevent-random-id"
    >
      Requires a label
    </label>
    <div
      class="c5 c6"
    >
      <div>
        <button
          aria-describedby=" "
          aria-haspopup="listbox"
          aria-multiselectable="false"
          class="c7"
          id="prevent-random-id"
          name="the-test-select-field"
          type="button"
        >
          <span
            class="c8 c9"
          >
            Select an option
          </span>
          <svg
            class="c10 c11"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: SelectField should render a disabled SelectField 1`] = `
.c11 {
  font-size: 8px;
  vertical-align: middle;
}

.c2 + .c1 {
  margin-top: 16px;
}

.c4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c9 {
  font-style: italic;
  color: hsl(200,9%,35%);
  font-size: 18px;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  min-width: 194px;
  width: 100%;
  height: 32px;
  padding: 0 24px 0 16px;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(200,9%,35%);
  text-align: left;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c7:disabled {
  border-color: hsl(0,0%,70%);
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c7:disabled .c8 {
  display: none;
}

.c7::-moz-focus-inner {
  border: 0;
}

.c7:focus,
.c7[aria-expanded] {
  border-color: hsl(200,96%,35%);
}

.c7:focus .c10,
.c7[aria-expanded] .c10 {
  color: hsl(200,96%,35%);
}

.c7[aria-expanded] .c10 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c7 .c10 {
  position: absolute;
  right: 14px;
  top: 10px;
}

.c6 {
  max-width: 100%;
}

.c0 {
  position: relative;
}

.c0 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c0 .c13 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .c12 {
  margin-left: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3 c4"
      for="prevent-random-id"
    >
      Requires a label
    </label>
    <div
      class="c5 c6"
    >
      <div>
        <button
          aria-describedby=" "
          aria-haspopup="listbox"
          aria-multiselectable="false"
          class="c7"
          disabled=""
          id="prevent-random-id"
          name="the-test-select-field"
          type="button"
        >
          <span
            class="c8 c9"
          >
            Select an option
          </span>
          <svg
            class="c10 c11"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: SelectField should render an accessible error message 1`] = `
.c12 {
  font-size: 8px;
  vertical-align: middle;
}

.c16 {
  vertical-align: middle;
}

.c2 + .c1 {
  margin-top: 16px;
}

.c4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c17 .c15,
.c17 .sc-kafWEX,
.c17 .sc-bwCtUz {
  margin-right: 4px;
  vertical-align: -2px;
}

.c18 .c15,
.c18 .sc-kafWEX,
.c18 .sc-bwCtUz {
  margin-right: 4px;
  vertical-align: -2px;
}

.c14 {
  border-radius: 0 8px 8px 8px;
  padding: 8px 16px 8px 16px;
  position: relative;
  box-sizing: border-box;
  overflow-wrap: break-word;
  display: inline-block;
  border: 2px solid;
  font-size: 15px;
  line-height: 23px;
  border-color: hsl(353,84%,44%);
}

.c14 .c15,
.c14 .sc-kafWEX,
.c14 .sc-bwCtUz {
  margin-right: 4px;
  vertical-align: -2px;
}

.c10 {
  font-style: italic;
  color: hsl(200,9%,35%);
  font-size: 18px;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  min-width: 194px;
  width: 100%;
  height: 32px;
  padding: 0 24px 0 16px;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(200,9%,35%);
  text-align: left;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c8:disabled {
  border-color: hsl(0,0%,70%);
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c8:disabled .c9 {
  display: none;
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:focus,
.c8[aria-expanded] {
  border-color: hsl(200,96%,35%);
}

.c8:focus .c11,
.c8[aria-expanded] .c11 {
  color: hsl(200,96%,35%);
}

.c8[aria-expanded] .c11 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c8 .c11 {
  position: absolute;
  right: 14px;
  top: 10px;
}

.c19 .c7 {
  border-color: hsl(145,89%,28%);
  background: hsla(145,89%,28%,0.2);
}

.c20 .c7 {
  border-color: hsl(47,82%,47%);
  background: hsla(47,82%,47%,0.2);
}

.c6 {
  max-width: 100%;
}

.c6 .c7 {
  border-color: hsl(353,84%,44%);
  background: hsla(353,84%,44%,0.2);
}

.c0 {
  position: relative;
}

.c0 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c0 .c21 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .c13 {
  margin-left: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3 c4"
      for="for-the-snap"
    >
      Requires a label
    </label>
    <div
      class="c5 c6"
    >
      <div>
        <button
          aria-describedby=" for-the-snap-status"
          aria-haspopup="listbox"
          aria-multiselectable="false"
          class="c7 c8"
          id="for-the-snap"
          name="the-test-select-field"
          type="button"
        >
          <span
            class="c9 c10"
          >
            Select an option
          </span>
          <svg
            class="c11 c12"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="c13 c14"
      id="for-the-snap-status"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="c15 c16"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.1055728,1.5527864 C11.4740971,0.815737865 12.5259029,0.815737865 12.8944272,1.5527864 L22.8944272,21.5527864 C23.2268777,22.2176875 22.743382,23 22,23 L2,23 C1.25661798,23 0.773122263,22.2176875 1.10557281,21.5527864 L11.1055728,1.5527864 Z M3.61803399,21 L20.381966,21 L12,4.23606798 L3.61803399,21 Z M12,18 C11.4477153,18 11,17.5522847 11,17 C11,16.4477153 11.4477153,16 12,16 C12.5522847,16 13,16.4477153 13,17 C13,17.5522847 12.5522847,18 12,18 Z M13,14 C13,14.5522847 12.5522847,15 12,15 C11.4477153,15 11,14.5522847 11,14 L11,11 C11,10.4477153 11.4477153,10 12,10 C12.5522847,10 13,10.4477153 13,11 L13,14 Z"
        />
      </svg>
      <span>
        <span>
          You've done this incorrectly
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`component: SelectField should render an accessible success message 1`] = `
.c12 {
  font-size: 8px;
  vertical-align: middle;
}

.c16 {
  vertical-align: middle;
}

.c2 + .c1 {
  margin-top: 16px;
}

.c4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c14 {
  border-radius: 0 8px 8px 8px;
  padding: 8px 16px 8px 16px;
  position: relative;
  box-sizing: border-box;
  overflow-wrap: break-word;
  display: inline-block;
  border: 2px solid;
  font-size: 15px;
  line-height: 23px;
  border-color: hsl(145,89%,28%);
}

.c14 .c17,
.c14 .sc-kafWEX,
.c14 .c15 {
  margin-right: 4px;
  vertical-align: -2px;
}

.c10 {
  font-style: italic;
  color: hsl(200,9%,35%);
  font-size: 18px;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  min-width: 194px;
  width: 100%;
  height: 32px;
  padding: 0 24px 0 16px;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(200,9%,35%);
  text-align: left;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c8:disabled {
  border-color: hsl(0,0%,70%);
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c8:disabled .c9 {
  display: none;
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:focus,
.c8[aria-expanded] {
  border-color: hsl(200,96%,35%);
}

.c8:focus .c11,
.c8[aria-expanded] .c11 {
  color: hsl(200,96%,35%);
}

.c8[aria-expanded] .c11 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c8 .c11 {
  position: absolute;
  right: 14px;
  top: 10px;
}

.c6 {
  max-width: 100%;
}

.c6 .c7 {
  border-color: hsl(145,89%,28%);
  background: hsla(145,89%,28%,0.2);
}

.c0 {
  position: relative;
}

.c0 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c0 .c18 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .c13 {
  margin-left: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3 c4"
      for="for-the-snap"
    >
      Requires a label
    </label>
    <div
      class="c5 c6"
    >
      <div>
        <button
          aria-describedby=" for-the-snap-status"
          aria-haspopup="listbox"
          aria-multiselectable="false"
          class="c7 c8"
          id="for-the-snap"
          name="the-test-select-field"
          type="button"
        >
          <span
            class="c9 c10"
          >
            Select an option
          </span>
          <svg
            class="c11 c12"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="c13 c14"
      id="for-the-snap-status"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="c15 c16"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
        />
      </svg>
      <span>
        <span>
          You're GREAT!
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`component: SelectField should render an accessible warning message 1`] = `
.c12 {
  font-size: 8px;
  vertical-align: middle;
}

.c16 {
  vertical-align: middle;
}

.c2 + .c1 {
  margin-top: 16px;
}

.c4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c17 .c19,
.c17 .c15,
.c17 .sc-bwCtUz {
  margin-right: 4px;
  vertical-align: -2px;
}

.c14 {
  border-radius: 0 8px 8px 8px;
  padding: 8px 16px 8px 16px;
  position: relative;
  box-sizing: border-box;
  overflow-wrap: break-word;
  display: inline-block;
  border: 2px solid;
  font-size: 15px;
  line-height: 23px;
  border-color: hsl(47,82%,47%);
}

.c14 .c19,
.c14 .c15,
.c14 .sc-bwCtUz {
  margin-right: 4px;
  vertical-align: -2px;
}

.c10 {
  font-style: italic;
  color: hsl(200,9%,35%);
  font-size: 18px;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  min-width: 194px;
  width: 100%;
  height: 32px;
  padding: 0 24px 0 16px;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(200,9%,35%);
  text-align: left;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c8:disabled {
  border-color: hsl(0,0%,70%);
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c8:disabled .c9 {
  display: none;
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:focus,
.c8[aria-expanded] {
  border-color: hsl(200,96%,35%);
}

.c8:focus .c11,
.c8[aria-expanded] .c11 {
  color: hsl(200,96%,35%);
}

.c8[aria-expanded] .c11 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c8 .c11 {
  position: absolute;
  right: 14px;
  top: 10px;
}

.c18 .c7 {
  border-color: hsl(145,89%,28%);
  background: hsla(145,89%,28%,0.2);
}

.c6 {
  max-width: 100%;
}

.c6 .c7 {
  border-color: hsl(47,82%,47%);
  background: hsla(47,82%,47%,0.2);
}

.c0 {
  position: relative;
}

.c0 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c0 .c20 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .c13 {
  margin-left: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3 c4"
      for="for-the-snap"
    >
      Requires a label
    </label>
    <div
      class="c5 c6"
    >
      <div>
        <button
          aria-describedby=" for-the-snap-status"
          aria-haspopup="listbox"
          aria-multiselectable="false"
          class="c7 c8"
          id="for-the-snap"
          name="the-test-select-field"
          type="button"
        >
          <span
            class="c9 c10"
          >
            Select an option
          </span>
          <svg
            class="c11 c12"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="c13 c14"
      id="for-the-snap-status"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="c15 c16"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M1.39339828,12.7071068 C1.00287399,12.3165825 1.00287399,11.6834175 1.39339828,11.2928932 L11.2928932,1.39339828 C11.6834175,1.00287399 12.3165825,1.00287399 12.7071068,1.39339828 L22.6066017,11.2928932 C22.997126,11.6834175 22.997126,12.3165825 22.6066017,12.7071068 L12.7071068,22.6066017 C12.3165825,22.997126 11.6834175,22.997126 11.2928932,22.6066017 L1.39339828,12.7071068 Z M3.51471863,12 L12,20.4852814 L20.4852814,12 L12,3.51471863 L3.51471863,12 Z M12,16 C11.4477153,16 11,15.5522847 11,15 C11,14.4477153 11.4477153,14 12,14 C12.5522847,14 13,14.4477153 13,15 C13,15.5522847 12.5522847,16 12,16 Z M13,12 C13,12.5522847 12.5522847,13 12,13 C11.4477153,13 11,12.5522847 11,12 L11,9 C11,8.44771525 11.4477153,8 12,8 C12.5522847,8 13,8.44771525 13,9 L13,12 Z"
        />
      </svg>
      <span>
        <span>
          You got a ridiculous warning
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`component: SelectField supports margin props 1`] = `
.c12 {
  font-size: 8px;
  vertical-align: middle;
}

.c2 + .c1 {
  margin-top: 16px;
}

.c4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c10 {
  font-style: italic;
  color: hsl(200,9%,35%);
  font-size: 18px;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  min-width: 194px;
  width: 100%;
  height: 32px;
  padding: 0 24px 0 16px;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(200,9%,35%);
  text-align: left;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c8:disabled {
  border-color: hsl(0,0%,70%);
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c8:disabled .c9 {
  display: none;
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:focus,
.c8[aria-expanded] {
  border-color: hsl(200,96%,35%);
}

.c8:focus .c11,
.c8[aria-expanded] .c11 {
  color: hsl(200,96%,35%);
}

.c8[aria-expanded] .c11 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c8 .c11 {
  position: absolute;
  right: 14px;
  top: 10px;
}

.c6 {
  max-width: 100%;
}

.c13 .c7 {
  border-color: hsl(145,89%,28%);
  background: hsla(145,89%,28%,0.2);
}

.c14 .c7 {
  border-color: hsl(47,82%,47%);
  background: hsla(47,82%,47%,0.2);
}

.c15 .c7 {
  border-color: hsl(353,84%,44%);
  background: hsla(353,84%,44%,0.2);
}

.c16 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c16 .c5 {
  width: 100%;
}

.c0 {
  position: relative;
  margin: 8px;
}

.c0 .c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 28px;
}

.c0 .c18 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .c17 {
  margin-left: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3 c4"
      for="for-the-snap"
    >
      Requires a label
    </label>
    <div
      class="c5 c6"
    >
      <div>
        <button
          aria-describedby=" "
          aria-haspopup="listbox"
          aria-multiselectable="false"
          class="c7 c8"
          id="for-the-snap"
          name="the-test-select-field"
          type="button"
        >
          <span
            class="c9 c10"
          >
            Select an option
          </span>
          <svg
            class="c11 c12"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
